fix image in cropper

--- a/apps/journal/src/global.scss
+++ b/apps/journal/src/global.scss
@@ -82,6 +82,7 @@ ion-list {
 
 img {
   display: block;
+  margin: auto;
   -webkit-user-drag: none;
   -khtml-user-drag: none;
   -moz-user-drag: none;
